data/contextbench_phase1/stripped/raw_transcripts/000198_aa8fb71e.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 2 USER]
PRIOR ISSUE METADATA
repo: django/django
instance_id: django__django-15347
base_commit: 7c4f3965098baad2396e24501e09237425a7bd6f
problem_statement:
Messages framework incorrectly serializes/deserializes extra_tags when it's an empty string
Description

When a message is serialised and then deserialised with any of the built in storage backends, then extra_tags=="" is converted to extra_tags==None. This is because MessageEncoder checks for the truthyness of extra_tags rather than checking it is not None.
To replicate this bug
>>> from django.conf import settings
>>> settings.configure() # Just to allow the following import
>>> from django.contrib.messages.storage.base import Message
>>> from django.contrib.messages.storage.cookie import MessageEncoder, MessageDecoder
>>> original_message = Message(10, "Here is a message", extra_tags="")
>>> encoded_message = MessageEncoder().encode(original_message)
>>> decoded_message = MessageDecoder().decode(encoded_message)
>>> original_message.extra_tags == ""
True
>>> decoded_message.extra_tags is None
True
Effect of the bug in application behaviour
This error occurred in the wild with a template tag similar to the following:
{% if x not in message.extra_tags %}
When the message was displayed as part of a redirect, it had been serialised and deserialized which meant that extra_tags was None instead of the empty string. This caused an error.
It's important to note that this bug affects all of the standard API (messages.debug, messages.info etc. all have a default value of extra_tags equal to "").
[RAW line 5 TOOL Bash]
find ./swebench_9_15/testbed -type f -name "*.py" -path "*/messages/storage/*" 2>/dev/null | head -20
[RAW line 6 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "pattern": "class MessageEncoder"
}
[RAW line 35 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "path": "testbed",
  "pattern": "class MessageEncoder"
}
[RAW line 36 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "path": "testbed",
  "pattern": "class MessageDecoder"
}
[RAW line 37 TOOL RESULT toolu_01VpvrkiCMvXivVjswBQHWCM]
Found 1 file
testbed/django/contrib/messages/storage/cookie.py
[RAW line 38 TOOL RESULT toolu_017AeRQ83aqnz6yaJsAS4itr]
Found 1 file
testbed/django/contrib/messages/storage/cookie.py
[RAW line 40 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/messages/storage/cookie.py"
}
[RAW line 41 TOOL RESULT toolu_01NxcJ44isbixhPtP3nW59Y9]
     1→import binascii
     2→import json
     3→
     4→from django.conf import settings
     5→from django.contrib.messages.storage.base import BaseStorage, Message
     6→from django.core import signing
     7→from django.http import SimpleCookie
     8→from django.utils.safestring import SafeData, mark_safe
     9→
    10→
    11→class MessageEncoder(json.JSONEncoder):
    12→    """
    13→    Compactly serialize instances of the ``Message`` class as JSON.
    14→    """
    15→    message_key = '__json_message'
    16→
    17→    def default(self, obj):
    18→        if isinstance(obj, Message):
    19→            # Using 0/1 here instead of False/True to produce more compact json
    20→            is_safedata = 1 if isinstance(obj.message, SafeData) else 0
    21→            message = [self.message_key, is_safedata, obj.level, obj.message]
    22→            if obj.extra_tags:
    23→                message.append(obj.extra_tags)
    24→            return message
    25→        return super().default(obj)
    26→
    27→
    28→class MessageDecoder(json.JSONDecoder):
    29→    """
    30→    Decode JSON that includes serialized ``Message`` instances.
    31→    """
    32→
    33→    def process_messages(self, obj):
    34→        if isinstance(obj, list) and obj:
    35→            if obj[0] == MessageEncoder.message_key:
    36→                if obj[1]:
    37→                    obj[3] = mark_safe(obj[3])
    38→                return Message(*obj[2:])
    39→            return [self.process_messages(item) for item in obj]
    40→        if isinstance(obj, dict):
    41→            return {key: self.process_messages(value)
    42→                    for key, value in obj.items()}
    43→        return obj
    44→
    45→    def decode(self, s, **kwargs):
    46→        decoded = super().decode(s, **kwargs)
    47→        return self.process_messages(decoded)
    48→
    49→
    50→class MessageSerializer:
    51→    def dumps(self, obj):
    52→
[... truncated ...]
[RAW line 44 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/messages/storage/base.py"
}
[RAW line 45 TOOL RESULT toolu_01JbBNBJTHhucKQNnsnKx5JF]
     1→from django.conf import settings
     2→from django.contrib.messages import constants, utils
     3→
     4→LEVEL_TAGS = utils.get_level_tags()
     5→
     6→
     7→class Message:
     8→    """
     9→    Represent an actual message that can be stored in any of the supported
    10→    storage classes (typically session- or cookie-based) and rendered in a view
    11→    or template.
    12→    """
    13→
    14→    def __init__(self, level, message, extra_tags=None):
    15→        self.level = int(level)
    16→        self.message = message
    17→        self.extra_tags = extra_tags
    18→
    19→    def _prepare(self):
    20→        """
    21→        Prepare the message for serialization by forcing the ``message``
    22→        and ``extra_tags`` to str in case they are lazy translations.
    23→        """
    24→        self.message = str(self.message)
    25→        self.extra_tags = str(self.extra_tags) if self.extra_tags is not None else None
    26→
    27→    def __eq__(self, other):
    28→        if not isinstance(other, Message):
    29→            return NotImplemented
    30→        return self.level == other.level and self.message == other.message
    31→
    32→    def __str__(self):
    33→        return str(self.message)
    34→
    35→    @property
    36→    def tags(self):
    37→        return ' '.join(tag for tag in [self.extra_tags, self.level_tag] if tag)
    38→
    39→    @property
    40→    def level_tag(self):
    41→        return LEVEL_TAGS.get(self.level, '')
    42→
    43→
    44→class BaseStorage:
    45→    """
    46→    This is the base backend for temporary message storage.
    47→
    48→    This is not a complete class; to be a usable storage backend, it must be
    49→    subclassed and the two methods ``_get`` and ``_store`` overridden.
    50→    """
    51→
    52→    def __init__(self, request, *args, **kwargs):
    53→        self.request = request
    54→        self._queued_messages = []
    55→
[... truncated ...]
[RAW line 52 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/messages/storage/cookie.py",
  "new_text_sha256": "b6585d771585972dbd960a5de8baed01bf7fad8a9831fcfcb26a74dcc93346df",
  "old_text_sha256": "4b854b47e1ccdea16f93e41904c346e1dda2b078d81ac7c988ce008f51487a3d"
}
[RAW line 60 TOOL Write]
{
  "content_sha256": "e5572ae3991a49a53369767185d9a27cf37d57e1f81fb3d26ede2905ee868b6a",
  "file_path": "./swebench_9_15/test_fix.py"
}
[RAW line 64 TOOL Bash]
python test_fix.py
[RAW line 65 TOOL RESULT toolu_01DaTNJGFVoqGG88dyt7drVU]
Exit code 1
  File "test_fix.py", line 16
    print(f"Original message extra_tags: {original_message.extra_tags!r}")
                                                                        ^
SyntaxError: invalid syntax
[RAW line 67 TOOL Bash]
python --version
[RAW line 68 TOOL RESULT toolu_01YB5YBHsbFhn9HtiiZYd3vG]
Python 2.7.3
[RAW line 70 TOOL Bash]
which python3
[RAW line 71 TOOL RESULT toolu_018riuZFPU6oAbY1GxLBGZXf]
/opt/anaconda3/bin/python3
[RAW line 73 TOOL Bash]
python3 test_fix.py
[RAW line 74 TOOL RESULT toolu_01WFFnEAwvfSHqzp7Rdp22s8]
Testing the bug fix for empty string extra_tags...

Original message extra_tags: ''
Original message extra_tags == '': True

Encoded message: ["__json_message", 0, 10, "Here is a message", ""]

Decoded message extra_tags: ''
Decoded message extra_tags == '': True
Decoded message extra_tags is None: False

✓ SUCCESS: extra_tags is correctly preserved as empty string!

============================================================
Additional test cases:
============================================================

1. Test with extra_tags=None:
   Original: None, Decoded: None
   ✓ PASS

2. Test with extra_tags='important urgent':
   Original: 'important urgent', Decoded: 'important urgent'
   ✓ PASS

3. Test with extra_tags=' ' (single space):
   Original: ' ', Decoded: ' '
   ✓ PASS

============================================================
All tests passed! The bug is fixed.
============================================================
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
